fix: remove scrollbar from carousel

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -413,6 +413,10 @@ dialog,
   display: none !important;
 }
 
+.hide-scroll{
+  scrollbar-width: none;
+}
+
 .icon-button {
   background-color: transparent;
   cursor: pointer;
